# Hanagram-web

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.build.yml  docker-compose.yml  todo.md
.claude/: settings.local.json
.github/workflows/: docker-image.yml
docs/: redesign-plan.md
src/: account_reset.rs  lib.rs  main.rs  security.rs  session_handler.rs  state.rs  store.rs  web_auth.rs
src/i18n/: en.rs  mod.rs  zh_cn.rs
src/web/: admin.rs  auth.rs  bootstrap.rs  dashboard.rs  maintenance.rs  middleware.rs  mod.rs  notifications.rs  platform_key.rs  runtime_cache.rs  shared.rs
src/web/sessions/: mod.rs  routes.rs  runtime.rs  storage.rs
src/web/telegram_workspace/: mod.rs  routes.rs
templates/: admin.html  dashboard_home.html  index.html  login.html  notifications.html  phone_login.html  qr_login.html  register.html  session_setup.html  settings.html  steam_workspace.html  telegram_workspace.html  totp_setup.html
