# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2026 Hanagram-web contributors

[package]
name = "hanagram-web"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[profile.release]
codegen-units = 1
incremental = false
lto = "thin"
panic = "abort"
strip = "symbols"

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
axum = { version = "0.8", features = ["multipart"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
data-encoding = "2"
dotenvy = "0.15"
grammers-client = { git = "https://github.com/Lonami/grammers" }
grammers-session = { git = "https://github.com/Lonami/grammers", features = ["serde"] }
hmac = "0.12"
image = "0.25"
libsql = { version = "0.9.29", default-features = false, features = ["core"] }
libsql-sys = { version = "0.9.29", features = ["rusqlite"] }
phonenumber = "0.3"
percent-encoding = "2"
qrcodegen = "1.8"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rqrr = "0.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
steamguard = { path = "vendor/steamguard" }
tera = "1.20"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
tower-http = { version = "0.6", default-features = false, features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
webauthn_rp = { version = "0.2.7", features = ["custom"] }
zeroize = "1"
zstd = "0.13"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[patch."https://github.com/Lonami/grammers"]
grammers-mtsender = { path = "vendor/grammers-mtsender-webk" }
